--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,6 @@
 envVars:
-  - key: HF_API_KEY
-    value: ${HF_API_KEY}
+  - key: DISCORD_TOKEN
+    value: ${DISCORD_TOKEN}
+  - key: OPENROUTER_API_KEY
+    value: ${OPENROUTER_API_KEY}
 startCommand: python bot.py
